# pyminify

./: .editorconfig  .gitignore  CHANGELOG.md  debug_imports.py  pyproject.toml
test_project/: .gitignore  README.md  build.py  pyproject.toml
test_project/B/: A.py  B.py  C.py  D.py  E.py  F.py  H.py  I.py  J.py  K.py  L.py  M.py  N.py  O.py  P.py  Q.py  R.py  S.py  T.py  U.py  V.py  W.py  X.py  Y.py  Z.py  __init__.py  a.py  b.py  c.py  d.py  e.py  f.py  g.py  h.py  i.py  j.py  k.py  m.py  n.py  o.py  (+5 more)
test_project/B/G/: A.py
test_project/B/l/: A.py
test_project/C/: A.py  B.py  C.py  E.py  __init__.py
test_project/C/D/: A.py
test_project/C/F/: A.py  B.py  C.py  D.py  E.py  F.py  G.py  __init__.py
test_project/D/: A.py  C.py  D.py  E.py  F.py  G.py  I.py  J.py  K.py  L.py  O.py  P.py  R.py  S.py  V.py  Y.py  Z.py  __init__.py
test_project/D/B/: A.py  B.py  C.py  D.py  E.py  F.py  __init__.py
test_project/D/H/: A.py  B.py
test_project/D/M/: A.py  __init__.py
test_project/D/N/: A.py  B.py  C.py  D.py
test_project/D/T/: A.py  B.py  C.py  D.py  E.py  F.py  (+1 more)
test_project/E/: A.py  B.py  C.py  D.py  E.py  F.py  G.py  H.py  I.py  J.py  K.py  L.py  M.py  N.py  O.py  P.py  Q.py  __init__.py
test_project/F/: A.py  B.py  C.py  D.py  E.py  F.py  G.py  H.py  I.py  J.py  K.py  L.py  N.py  O.py  P.py  Q.py  R.py  S.py  T.py  U.py  V.py  W.py  __init__.py
test_project/G/: A.py  B.py  C.py  E.py  F.py  H.py  I.py  J.py  K.py  L.py  __init__.py
test_project/annotated_doc/: __init__.py  main.py
test_project/annotated_types/: __init__.py  test_cases.py
test_project/app/: app.py
test_project/httpcore/: __init__.py  _api.py  _exceptions.py  _models.py  _ssl.py  _synchronization.py  _trace.py  _utils.py
test_project/lib/: __init__.py
test_project/typing_inspection/: introspection.py  typing_objects.py
(+180 files in other folders)
