[project]
name = "pyminify"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.6",
]

[project.scripts]
pyminify = "python_minifier:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "python_minifier"

