[project]
name = "pyminify"
version = "0.1.3"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.6",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "debugpy>=1.8.17",
    "ty>=0.0.1a27",
]

[project.scripts]
pyminify = "python_minifier:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "python_minifier"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E401", "F403", "F405"]
