[project]
name = "example-project"
version = "0.1.0"
description = "Example FastAPI project to test pyminify"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "orjson>=3.11.4",
    "vercel>=0.3.5",
]

[dependency-groups]
dev = [
    "pydevd-pycharm>=253.28294.166",
]
